--- a/home.html
+++ b/home.html
@@ -10,15 +10,15 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./CSS/style.css">
-    <title>Hello, world!</title>
+    <title>Ajoor - Home</title>
   </head>
   <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-                <a class="navbar-brand" href="#">
-                  <img src="./Assets/Logo.jpg" alt="" width="48" height="60">
-                </a>
+          <a class="navbar-brand" href="#">
+              <img src="./Assets/Logo.jpg" alt="" width="48" height="60">
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -264,10 +264,6 @@
         </div>
       </div>
     </section>
-    <!-- Footer End -->
-
-    <!-- Footer -->
-
     <!-- Footer End -->
 
     <!-- Optional JavaScript; choose one of the two! -->
