--- a/premium.html
+++ b/premium.html
@@ -10,7 +10,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="./CSS/style.css">
-    <title>Ajoor - Home</title>
+    <title>Nama Produk Premium</title>
   </head>
   <body>
     <!-- Navbar -->
